--- a/src/EFormsBundle/Resources/views/Home/view.html.twig
+++ b/src/EFormsBundle/Resources/views/Home/view.html.twig
@@ -1,22 +1,21 @@
 {% extends "EFormsBundle:Admin:leftSideBarBase.html.twig" %}
 
 {% block rightsidebar %}
-    <h1 class="page-header">Creeaza un formular nou</h1>
-    <div class="build-wrap"></div>
-    <div class="render-wrap"></div>
-    <button id="edit-form">Edit Form</button>
+    <h1>Completati formularul</h1>
+    <form id="render-form">
+        <div class="render-wrap" data-form-builder='[{"type": "text","label": "Text Field","subtype": "text","name": "text-1476000241400","className": "Cnp"}]'></div>
+        <input id="submitBtn" type="button" value="Trimite" />
+    </form>
 {% endblock %}
 
 {% block javascripts %}
     <script src="{{ asset('bundles/eforms/js/form-render.min.js') }}"></script>
-    <script src="{{ asset('bundles/eforms/js/demo.js') }}"></script>
+    <script src="{{ asset('bundles/eforms/js/validation.js') }}"></script>
+    <script src="{{ asset('bundles/eforms/js/utils.js') }}"></script>
+    <script src="{{ asset('bundles/eforms/js/demo_renderer.js') }}"></script>
 {% endblock %}
 
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ asset('bundles/eforms/css/form-builder.min.css') }}" />
     <link rel="stylesheet" type="text/css" href="{{ asset('bundles/eforms/css/form-render.min.css') }}" />
-{% endblock %}
-
-{% block container %}
-
 {% endblock %}
