--- a/src/EFormsBundle/Resources/views/Admin/base.html.twig
+++ b/src/EFormsBundle/Resources/views/Admin/base.html.twig
@@ -38,6 +38,7 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="{{ asset('bundles/eforms/js/jquery.min.js') }}"></script>
 <script src="{{ asset('bundles/eforms/js/bootstrap.min.js') }}"></script>
+<script src="{{ asset('bundles/eforms/js/main.js') }}"></script>
 {% block javascripts %}{% endblock %}
 
 </body>
