--- a/src/EFormsBundle/Resources/views/Admin/create.html.twig
+++ b/src/EFormsBundle/Resources/views/Admin/create.html.twig
@@ -1,7 +1,13 @@
 {% extends "EFormsBundle:Admin:leftSideBarBase.html.twig" %}
 
 {% block rightsidebar %}
-    <h1 class="page-header">Creeaza un formular nou</h1>
+    <h1 class="page-header">Creare formular</h1>
+    <h2>Date formular</h2>
+    <div class="form-group">
+        <label for="exampleInputEmail1">Nume Formular</label>
+        <input type="text" class="form-control" id="formName" placeholder="Numele formularului">
+    </div>
+    <h2>Campuri de completat</h2>
     <div class="build-wrap"></div>
     <div class="render-wrap"></div>
     <button id="edit-form">Edit Form</button>
