--- a/src/EFormsBundle/Resources/views/Home/view.html.twig
+++ b/src/EFormsBundle/Resources/views/Home/view.html.twig
@@ -3,7 +3,7 @@
 {% block rightsidebar %}
     <h1>Completati formularul</h1>
     <form id="render-form">
-        <div class="render-wrap" data-form-builder='[{"type": "text","label": "Text Field","subtype": "text","name": "text-1476000241400","className": "Cnp"}]'></div>
+        <div class="render-wrap" data-form-builder='{{ form|json_encode }}'></div>
         <input id="submitBtn" type="button" value="Trimite" />
     </form>
 {% endblock %}
