Added form description

--- a/src/EFormsBundle/Resources/views/Admin/create.html.twig
+++ b/src/EFormsBundle/Resources/views/Admin/create.html.twig
@@ -4,13 +4,16 @@
     <h1 class="page-header">Creare formular</h1>
     <h2>Date formular</h2>
     <div class="form-group">
-        <label for="exampleInputEmail1">Nume Formular</label>
+        <label for="formName">Nume Formular</label>
         <input type="text" class="form-control" id="formName" placeholder="Numele formularului">
+    </div>
+    <div class="form-group">
+        <label for="formName">Descriere</label>
+        <textarea class="form-control" rows="3" placeholder="Descriere" id="formDescription"></textarea>
     </div>
     <h2>Campuri de completat</h2>
     <div class="build-wrap"></div>
     <div class="render-wrap"></div>
-    <button id="edit-form">Edit Form</button>
 {% endblock %}
 
 {% block javascripts %}
