Adding correct URLs

--- a/src/EFormsBundle/Resources/views/Admin/leftSideBarBase.html.twig
+++ b/src/EFormsBundle/Resources/views/Admin/leftSideBarBase.html.twig
@@ -32,8 +32,8 @@
         <div class="row">
             <div class="col-sm-3 col-md-2 sidebar">
                 <ul class="nav nav-sidebar">
-                    <li class="active"><a href="#">Lista formulare <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Adauga formular</a></li>
+                    <li class="active"><a href="{{ path('eforms_admin_list') }}">Lista formulare <span class="sr-only">(current)</span></a></li>
+                    <li><a href="{{ path('eforms_admin_create') }}">Adauga formular</a></li>
                     <li><a href="#">Statistici</a></li>
                     <li><a href="#">Export</a></li>
                 </ul>
