--- a/src/EFormsBundle/Resources/views/Admin/list.html.twig
+++ b/src/EFormsBundle/Resources/views/Admin/list.html.twig
@@ -10,7 +10,7 @@
 					<h3>{{ item.label|e| truncate(50) }}</h3>
 					<p>{{ item.description|e|truncate(160) }}</p>
 					<p>
-						<a href="{{ path('view', {id: item.id}) }}" class="btn btn-primary" role="button">
+						<a href="{{ path('eforms_home_view', {id: item.id}) }}" class="btn btn-primary" role="button">
 							<span class="glyphicon glyphicon-eye-open"></span> Vezi
 						</a>
 						<a href="#" class="btn btn-success" role="button"><span class="glyphicon glyphicon-pencil"></span> Editeaza</a>
