Fix list ok short txt

--- a/src/EFormsBundle/Resources/public/css/dashboard.css
+++ b/src/EFormsBundle/Resources/public/css/dashboard.css
@@ -103,3 +103,13 @@ body {
     display: inline-block;
     border-radius: 50%;
 }
+
+/*
+ * List forms
+ */
+.forms-list h3 {
+    height: 75px;
+}
+.forms-list .description {
+    height: 82px;
+}
