--- a/src/EFormsBundle/Resources/views/Admin/list.html.twig
+++ b/src/EFormsBundle/Resources/views/Admin/list.html.twig
@@ -2,13 +2,13 @@
 
 {% block rightsidebar %}
     <h1 class="page-header">Formulare active</h1>
-	<div class="row">
+	<div class="row forms-list">
 		{% for item in data %}
 		<div class="col-sm-6 col-md-4">
 			<div class="thumbnail">
 				<div class="caption">
 					<h3>{{ item.label|e|truncate(50) }}</h3>
-					<p>{{ item.description|e|truncate(160) }}</p>
+					<p class="description">{{ item.description|e|truncate(160) }}</p>
 					<p>
 						<a href="{{ path('eforms_home_view', {id: item.id}) }}" class="btn btn-primary" role="button">
 							<span class="glyphicon glyphicon-eye-open"></span> Vezi
