Added confirm message when creating form

--- a/src/EFormsBundle/Resources/views/Admin/create.html.twig
+++ b/src/EFormsBundle/Resources/views/Admin/create.html.twig
@@ -14,6 +14,21 @@
     <h2>Campuri de completat</h2>
     <div class="build-wrap"></div>
     <div class="render-wrap"></div>
+
+    <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="gridSystemModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="gridSystemModalLabel">Atentie!</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <h2>Va rugam asteptati..</h2>
+                    </div>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 {% endblock %}
 
 {% block javascripts %}
