--- a/src/EFormsBundle/Resources/views/Home/index.html.twig
+++ b/src/EFormsBundle/Resources/views/Home/index.html.twig
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-sm-3 col-md-2 sidebar">
                 <ul class="nav nav-sidebar">
-                    <li class="active"><a href="{{ path('eforms_admin_list') }}">Lista formulare <span class="sr-only">(current)</span></a></li>
+                    <li class="active"><a href="{{ path('eforms_home_list') }}">Lista formulare <span class="sr-only">(current)</span></a></li>
                 </ul>
             </div>
 
