--- a/src/EFormsBundle/Resources/views/Home/view.html.twig
+++ b/src/EFormsBundle/Resources/views/Home/view.html.twig
@@ -4,7 +4,7 @@
     <h1>Completati formularul</h1>
     <form id="render-form">
         <div class="render-wrap" data-form-builder='{{ widgets|json_encode }}'></div>
-        <input id="submitBtn" type="button" value="Trimite" />
+        <input id="submitBtn" type="button" class="btn btn-success" value="Trimite" />
     </form>
 {% endblock %}
 
