Added range validation

--- a/src/EFormsBundle/Resources/views/Home/view.html.twig
+++ b/src/EFormsBundle/Resources/views/Home/view.html.twig
@@ -2,7 +2,7 @@
 
 {% block rightsidebar %}
     <h1>Completati formularul</h1>
-    <form id="render-form">
+    <form id="render-form" method="post">
         <div class="render-wrap" data-form-builder='{{ widgets|json_encode }}'></div>
         <input id="submitBtn" type="button" class="btn btn-success" value="Trimite" />
     </form>
