--- a/src/EFormsBundle/Resources/views/Home/view.html.twig
+++ b/src/EFormsBundle/Resources/views/Home/view.html.twig
@@ -1,11 +1,13 @@
-{% extends "EFormsBundle:Admin:leftSideBarBase.html.twig" %}
+{% extends "EFormsBundle:Admin:base.html.twig" %}
 
-{% block rightsidebar %}
+{% block container %}
+<div class="container">
     <h1>Completati formularul</h1>
     <form id="render-form" method="post">
         <div class="render-wrap" data-form-builder='{{ widgets|json_encode }}'></div>
         <input id="submitBtn" type="button" class="btn btn-success" value="Trimite" />
     </form>
+</div>
 {% endblock %}
 
 {% block javascripts %}
